tests/integration/owned_abstractions/moved_owned_var_error2.june
// error: moved variable accessed after move

struct Foo {
    z: i64
}

fun bar(abc: Foo) {

}

let foo = new owned Foo(z: 100)

bar(foo)

println(foo.z)